[package]
name = "markplus"
version = "0.1.0"
edition = "2024"

[lib]
name = "markplus_hx"
crate-type = [ "cdylib" ]

[dependencies]
abi_stable = "0.11.3"
pulldown-cmark = { version = "0.13.0", default-features = false }
regex = "1.10.5"
steel-core = { version = "0.7.0", features = [ "dylibs", "sync" ] }
steel-derive = { version = "0.6.0" }
lazy_static = "1.5.0"
ropey = "1.6.1"
